[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hydra"
version = "0.1.0"
requires-python = ">= 3.12"
description = "HYDRA OSINT Aggregation & Correlation Platform"
dependencies = [
    # API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    # Models
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    # Async HTTP
    "aiohttp>=3.10",
    "httpx>=0.27",
    # Data
    "numpy>=2.1",
    "pandas>=2.2",
    "xarray>=2024.9",
    # Geospatial
    "geopandas>=1.0",
    "shapely>=2.0",
    "geojson>=3.1",
    # Database
    "sqlalchemy>=2.0.35",
    "asyncpg>=0.30",
    "alembic>=1.13",
    # Storage clients
    "boto3>=1.35",
    "elasticsearch[async]>=8.15",
    "influxdb-client>=1.46",
    "neo4j>=5.25",
    # Orchestration
    "apache-airflow>=2.10",
    # Serialization
    "pyyaml>=6.0.2",
    "orjson>=3.10",
    # Hashing
    "xxhash>=3.5",
    # String similarity
    "jellyfish>=1.0.0",
    # Specialized parsers
    "obspy>=1.4.1",
    "astropy>=6.1",
    # Cyber threat
    "stix2>=3.0.1",
    "taxii2-client>=2.3",
    # Statistical
    "pandasdmx>=1.0",
    # Logging
    "structlog>=24.1",
    # Scrape/RSS
    "feedparser>=6.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    # AIS
    "pyais>=2.6",
    # STIX extras
    "stix2-patterns>=2.0",
    "ijson>=3.2",
    # Date parsing
    "python-dateutil>=2.8",
    # Monitoring / observability (P12)
    "prometheus-client>=0.20",
    "prometheus-fastapi-instrumentator>=7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
    "hypothesis>=6.100",
]
imagery = [
    "rasterio>=1.4",
    "gdal>=3.9",
]
seismic = [
    "obspy>=1.4.1",
]
astronomy = [
    "astropy>=6.1",
]
cloud = [
    "boto3>=1.35",
]
scientific = [
    "xarray>=2024.9",
    "netCDF4>=1.7",
    "h5py>=3.11",
]
all = [
    "hydra[astronomy,cloud,scientific,seismic]",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
strict = true
